rust/macros/tests/ui/fail/legacy_brace_protocol.rs
use telltale_macros::choreography;

choreography! {
    protocol PingPong {
        roles Alice, Bob;
        Alice -> Bob: Ping;
        Bob -> Alice: Pong;
    }
}

fn main() {}
