rust/macros/tests/ui/fail/legacy_brace_protocol.stderr
error: Choreography parse error:
       Syntax error: legacy brace-based protocol blocks are removed; keep `=` on the header line and use indentation
         --> input:1:19
           |
         1 | protocol PingPong { roles Alice, Bob; Alice -> Bob: Ping; Bob -> Alice: Pong; }
                               ^

       Macro token input is parsed from original source text.
       Use the canonical indentation-based DSL surface in token form.
 --> tests/ui/fail/legacy_brace_protocol.rs:3:1
  |
3 | / choreography! {
4 | |     protocol PingPong {
5 | |         roles Alice, Bob;
6 | |         Alice -> Bob: Ping;
... |
9 | | }
  | |_^
  |
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)
